fixed modals z-index

--- a/src/styles/ModalCart.scss
+++ b/src/styles/ModalCart.scss
@@ -15,6 +15,8 @@
     flex-direction: column;
     align-items: center;
 
+    z-index: 1;
+
     button {
       border: none;
       background: rgb(49, 49, 49);
